Jaccard Distance implementation
Co-authored-by: La Monte Henry Piggy Yarroll <piggy.yarroll@gmail.com>
Co-authored-by: Padmaja Kurumaddali <pkurumad@syr.edu>

--- a/IST691/mistral_transfer_learning.ipynb
+++ b/IST691/mistral_transfer_learning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "machine_shape": "hm",
-      "gpuType": "A100",
+      "gpuType": "T4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1776,16 +1776,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hlOljOtteCqp",
-        "outputId": "928c4037-cb69-420c-cd03-5768bac0be90"
+        "outputId": "c0d30b8d-a374-45a8-f7d3-91fdc3038772"
       },
       "execution_count": 1,
       "outputs": [
         {
-          "metadata": {
-            "tags": null
-          },
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "/content\n",
             "Mounted at /content/drive\n"
@@ -1795,7 +1792,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "iLYJrbHqo-kA",
         "outputId": "6564c1b0-63bf-4048-a40b-0e41e6b36f5d",
@@ -1967,15 +1964,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1rYX5QaXpGV6",
-        "outputId": "141ae900-11d8-4e95-fc73-a76a3d0472b7"
+        "outputId": "a07f0187-7099-453e-f85f-4af8bd125ede"
       },
-      "execution_count": 3,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "/content/drive/My Drive/SKOL/IST691\n"
+            "/content/drive/.shortcut-targets-by-id/1oRBBGLhTLr9k0-7Qy5rCh8TSd-zhH2mz/SKOL/IST691\n"
           ]
         }
       ]
@@ -2003,7 +2000,7 @@
       "metadata": {
         "id": "cRttKoCqpfYW"
       },
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -2015,7 +2012,7 @@
       "metadata": {
         "id": "P9ThmwE6pr6N"
       },
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -2035,7 +2032,7 @@
       "metadata": {
         "id": "APuMWCKxqz9R"
       },
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -2050,9 +2047,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "65132d32-db3d-4194-c2c4-dcd044a1795e"
+        "outputId": "fab80b6e-aaeb-4cc5-d1bd-7149e4502b02"
       },
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2071,7 +2068,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 5
         }
       ]
     },
@@ -2084,7 +2081,7 @@
       "metadata": {
         "id": "3fBkvAzXptoJ"
       },
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -2133,7 +2130,7 @@
       "metadata": {
         "id": "vU4jj_ZoqFM4"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2179,7 +2176,7 @@
       "metadata": {
         "id": "H2Jp6N6lrmn5"
       },
-      "execution_count": 46,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -2193,9 +2190,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "245f59ba-75be-48a4-a9a6-8516c96fe7b1"
+        "outputId": "5eab12c2-6950-4283-a87a-f87690653b19"
       },
-      "execution_count": 47,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -2229,7 +2226,7 @@
         },
         "outputId": "8ed5766f-5ca2-4801-98d3-b79fe9237124"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2263,7 +2260,7 @@
       "metadata": {
         "id": "jOMDIGtFqKDz"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2307,7 +2304,7 @@
         },
         "outputId": "0acfb1e1-18ca-4cac-b9f8-13f01f9d4c30"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2338,7 +2335,7 @@
       "metadata": {
         "id": "2zzAZ5NXrTbC"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2358,7 +2355,7 @@
       "metadata": {
         "id": "wHEQXBGnrYf8"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2378,7 +2375,7 @@
       "metadata": {
         "id": "jbAK_AcRrllt"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2432,7 +2429,7 @@
         },
         "outputId": "e2d62fb0-2403-476d-8802-8d0e354b81cd"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2493,7 +2490,7 @@
         },
         "outputId": "dfe2f809-4cd0-4e14-e1dc-771b3f997430"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2741,7 +2738,7 @@
       "metadata": {
         "id": "6ft_ML-1tr6B"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2756,7 +2753,7 @@
         },
         "outputId": "7a64b6bf-96a7-4546-9495-0cc4801e8055"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2817,7 +2814,7 @@
         },
         "outputId": "875ff82f-ae8c-4f70-820b-141507c4d316"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2982,7 +2979,7 @@
       "metadata": {
         "id": "9ipKj0pTugn8"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3018,7 +3015,7 @@
         "id": "x7sYF8ceusBn",
         "outputId": "1f8f8c81-96c7-46d8-f048-d71f129b35de"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3041,7 +3038,7 @@
         "id": "EFAC_FU_u53l",
         "outputId": "717491e6-2f51-4c3b-cc63-21c019e8daa5"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3203,7 +3200,7 @@
       "metadata": {
         "id": "nPKZus-Cu-gK"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3218,7 +3215,7 @@
         "id": "Ya-fYP70FgeN",
         "outputId": "ff4b124f-1c11-42ce-d7e3-1d3b6ca5e1d2"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3298,7 +3295,7 @@
         "id": "CxiMD_1evHOA",
         "outputId": "42e129b8-ff15-4652-bf57-4f7de2a521bf"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3568,7 +3565,7 @@
         "id": "tiQKEr07w5aQ",
         "outputId": "7a8537b3-8d61-490f-debf-5cc5bb65e874"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3610,7 +3607,7 @@
         "id": "p_k1K85_54NX",
         "outputId": "9de0895e-c8bd-4757-c033-f69e976d6684"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3797,7 +3794,7 @@
         "id": "0Q3MDfza_lcB",
         "outputId": "9b449bbd-675e-4486-c99b-e354df61bd6b"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3889,7 +3886,7 @@
         },
         "outputId": "7a7778bf-6321-4d45-873d-daeab765f1d1"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4045,6 +4042,91 @@
             "    }\n",
             "}\n",
             "```\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Initial implementation came from a Google search of\n",
+        "# \"cosine similarity of two JSON objects python\".\n",
+        "# We need to adjust this to handle a 3 level structure of\n",
+        "# (feature, subfeature, value), where the values may be list based, and\n",
+        "# may be categorical. We need to build a dictionary of known features,\n",
+        "# subfeatures, and values to be used to assign numerical values.\n",
+        "import json\n",
+        "import numpy as np\n",
+        "from numpy.linalg import norm\n",
+        "\n",
+        "def recurse_keys(json_obj):\n",
+        "  keys = set()\n",
+        "  values = set()\n",
+        "  if isinstance(json_obj, dict):\n",
+        "    for key, value in json_obj.items():\n",
+        "      keys.add(key)\n",
+        "      subkeys, subvalues = recurse_keys(value)\n",
+        "      keys.update(subkeys)\n",
+        "      values.update(subvalues)\n",
+        "  elif isinstance(json_obj, list):\n",
+        "    values.update(json_obj)\n",
+        "  elif isinstance(json_obj, str):\n",
+        "    values.add(json_obj)\n",
+        "  else:\n",
+        "    raise ValueError(f\"Not a valid type:{type(json_obj)}-#{json_obj}\")\n",
+        "  return (keys,values)\n",
+        "\n",
+        "def jaccard_distance(set1, set2):\n",
+        "    intersection = set1.intersection(set2)\n",
+        "    union = set1.union(set2)\n",
+        "    jaccard_index = len(intersection) / len(union)\n",
+        "    jaccard_distance = 1 - jaccard_index\n",
+        "    return jaccard_distance\n",
+        "\n",
+        "def jaccard_distance_json(json1, json2):\n",
+        "    \"\"\"\n",
+        "    Calculates the cosine similarity between two JSON objects.\n",
+        "\n",
+        "    Args:\n",
+        "        json1 (dict): The first JSON object.\n",
+        "        json2 (dict): The second JSON object.\n",
+        "\n",
+        "    Returns:\n",
+        "        float: The cosine similarity between the two JSON objects.\n",
+        "    \"\"\"\n",
+        "\n",
+        "    all_keys,all_vals = recurse_keys(json1)\n",
+        "    all_keys2,all_vals2 = recurse_keys(json2)\n",
+        "    j1 = jaccard_distance(all_keys,all_keys2)\n",
+        "    j2 = jaccard_distance(all_vals,all_vals2)\n",
+        "\n",
+        "    avg_jaccard_distance = (j1+j2)/2\n",
+        "\n",
+        "    return avg_jaccard_distance\n",
+        "\n",
+        "# Example Usage\n",
+        "json_training_0 = json.loads(json_training[0]['result'])\n",
+        "json_training_1 = json.loads(json_training[1]['result'])\n",
+        "#print(json_training[0]['result'])\n",
+        "#print(json_training[1][\"result\"])\n",
+        "print(jaccard_distance_json(json_training_0,json_training_0))\n",
+        "print(jaccard_distance_json(json_training_0,json_training_1))\n"
+      ],
+      "metadata": {
+        "id": "gv4BAcz_P5px",
+        "outputId": "39cb143a-2597-47c2-c68a-1342d15403c5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.0\n",
+            "0.9131313131313131\n"
           ]
         }
       ]
