Set max_length uniformly to 1024. It is now controlled by a single variable.

--- a/IST691/mistral_transfer_learning.ipynb
+++ b/IST691/mistral_transfer_learning.ipynb
@@ -5175,7 +5175,7 @@
         "%cd /content\n",
         "content = Path('/content')\n",
         "skol = content / 'drive/My Drive/SKOL'\n",
-        "piggyatbaqaqi = skol / 'github.com/piggyatbaqaqi'\n",
+        "1-0piggyatbaqaqi = skol / 'github.com/piggyatbaqaqi'\n",
         "drive.mount(str(content / \"drive\"), force_remount=True)\n",
         "cache_path = content / 'cache'\n",
         "ollama_cache_path = content / 'ollama_cache'\n",
@@ -5694,6 +5694,7 @@
         "\n",
         "login(token=token)\n",
         "base_model_id = \"mistralai/Mistral-7B-Instruct-v0.3\"\n",
+        "max_length = 1024\n",
         "bnb_config = BitsAndBytesConfig(\n",
         "    load_in_4bit=True,\n",
         "    bnb_4bit_use_double_quant=True,\n",
@@ -5922,7 +5923,7 @@
       "source": [
         "tokenizer = AutoTokenizer.from_pretrained(\n",
         "    base_model_id,\n",
-        "    model_max_length=1024,\n",
+        "    model_max_length=max_length,\n",
         "    padding_side=\"left\",\n",
         "    add_eos_token=True)\n",
         "tokenizer.pad_token = tokenizer.eos_token\n"
@@ -6049,7 +6050,7 @@
         "    result = tokenizer(\n",
         "        prompt,\n",
         "        truncation=True,\n",
-        "        max_length=1024,\n",
+        "        max_length=max_length,\n",
         "        padding=\"max_length\",\n",
         "    )\n",
         "    result[\"labels\"] = result[\"input_ids\"].copy()\n",
@@ -6474,7 +6475,7 @@
         "base_model_input = tokenizer(eval_prompt, return_tensors=\"pt\").to(\"cuda\")\n",
         "base_model.eval()\n",
         "with torch.no_grad():\n",
-        "    print(tokenizer.decode(base_model.generate(**base_model_input, max_new_tokens=2048, pad_token_id=2)[0], skip_special_tokens=True))\n"
+        "    print(tokenizer.decode(base_model.generate(**base_model_input, max_new_tokens=max_length, pad_token_id=2)[0], skip_special_tokens=True))\n"
       ],
       "metadata": {
         "id": "x5sJOjUnt0Va",
@@ -6613,7 +6614,7 @@
         "    base_model_input = tokenizer(eval_prompt, return_tensors=\"pt\").to(\"cuda\")\n",
         "    base_model.eval()\n",
         "    with torch.no_grad():\n",
-        "        print(tokenizer.decode(base_model.generate(**base_model_input, max_new_tokens=2048, pad_token_id=2)[0], skip_special_tokens=True), file=f)\n"
+        "        print(tokenizer.decode(base_model.generate(**base_model_input, max_new_tokens=max_length, pad_token_id=2)[0], skip_special_tokens=True), file=f)\n"
       ],
       "metadata": {
         "id": "bJeBLyAZWH8r",
@@ -6812,7 +6813,7 @@
         "ft_model = PeftModel.from_pretrained(base_model, \"mistral-skol-finetune/checkpoint-200\")\n",
         "ft_model.eval()\n",
         "with torch.no_grad():\n",
-        "    print(tokenizer.decode(ft_model.generate(**base_model_input, max_new_tokens=2048, pad_token_id=2)[0], skip_special_tokens=True))\n"
+        "    print(tokenizer.decode(ft_model.generate(**base_model_input, max_new_tokens=max_length, pad_token_id=2)[0], skip_special_tokens=True))\n"
       ],
       "metadata": {
         "id": "p_k1K85_54NX"
@@ -6898,7 +6899,7 @@
         "base_model_input = tokenizer(eval_prompt, return_tensors=\"pt\").to(\"cuda\")\n",
         "base_model.eval()\n",
         "with torch.no_grad():\n",
-        "    print(tokenizer.decode(base_model.generate(**base_model_input, max_new_tokens=2048, pad_token_id=2)[0], skip_special_tokens=True))\n"
+        "    print(tokenizer.decode(base_model.generate(**base_model_input, max_new_tokens=max_length, pad_token_id=2)[0], skip_special_tokens=True))\n"
       ],
       "metadata": {
         "id": "LRVrCQshHcZj"
@@ -7058,8 +7059,8 @@
       "cell_type": "code",
       "source": [
         "with torch.no_grad():\n",
-        "  base_model_result = extract_json(tokenizer.decode(base_model.generate(**base_model_input, max_new_tokens=2048, pad_token_id=2)[0], skip_special_tokens=True).lower())\n",
-        "  ft_model_result = extract_json(tokenizer.decode(ft_model.generate(**ft_model_input, max_new_tokens=2048, pad_token_id=2)[0], skip_special_tokens=True).lower())\n"
+        "  base_model_result = extract_json(tokenizer.decode(base_model.generate(**base_model_input, max_new_tokens=max_length, pad_token_id=2)[0], skip_special_tokens=True).lower())\n",
+        "  ft_model_result = extract_json(tokenizer.decode(ft_model.generate(**ft_model_input, max_new_tokens=max_length, pad_token_id=2)[0], skip_special_tokens=True).lower())\n"
       ],
       "metadata": {
         "id": "NzaR6NMTg9qd"
