Set up for 1000 steps. I'll run this overnight.

--- a/IST691/mistral_transfer_learning.ipynb
+++ b/IST691/mistral_transfer_learning.ipynb
@@ -7847,6 +7847,7 @@
         "from datetime import datetime\n",
         "import wandb\n",
         "project = \"skol-finetune\"\n",
+        "num_steps = 1000\n",
         "base_model_name = \"mistral\"\n",
         "run_name = base_model_name + \"-\" + project\n",
         "output_dir = \"./\" + run_name\n",
@@ -7863,7 +7864,7 @@
         "        per_device_train_batch_size=2,\n",
         "        gradient_accumulation_steps=4,\n",
         "        # max_steps=1000,\n",
-        "        max_steps=100,\n",
+        "        max_steps=num_steps,\n",
         "        learning_rate=2.5e-5, # Want about 10x smaller than the Mistral learning rate\n",
         "        logging_steps=10,\n",
         "        bf16=True,\n",
@@ -8259,7 +8260,7 @@
       "cell_type": "code",
       "source": [
         "from peft import PeftModel\n",
-        "ft_model = PeftModel.from_pretrained(base_model, \"mistral-skol-finetune/checkpoint-100\")\n",
+        "ft_model = PeftModel.from_pretrained(base_model, f\"mistral-skol-finetune/checkpoint-{num_steps}\")\n",
         "ft_model.eval()\n",
         "with torch.no_grad():\n",
         "    print(tokenizer.decode(ft_model.generate(**base_model_input, max_new_tokens=max_length, pad_token_id=2)[0], skip_special_tokens=True))\n"
