This ALMOST works. I'm just not seeing the attachments.

--- a/jupyter/ist769_skol.ipynb
+++ b/jupyter/ist769_skol.ipynb
@@ -2863,7 +2863,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
+   "id": "7e75c64e-95cb-478a-9a85-46d1297e4225",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[summary: string, _id: string, _rev: string, abstract: string, author: string, doi: string, eissn: string, issn: string, itemtype: string, journal: string, number: string, pages: string, parent_itemid: string, pdf_url: string, publication date: string, publishercode: string, title: string, url: string, volume: string, year: string]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "5af856e1-d645-4020-9db4-b48633db5e2f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Column<'_attachments'>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
    "id": "9befa546-a895-4a13-8744-d512587d9661",
    "metadata": {},
    "outputs": [],
@@ -2871,38 +2913,64 @@
     "# Content-Type: text/html; charset=UTF-8\n",
     "\n",
     "def pdf_to_text(pdf_contents: bytes) -> bytes:\n",
-    "    doc = pymupdf4llm.Document(stream=pdf_contents)\n",
+    "    doc = fitz.open(stream=BytesIO(pdf_contents), filetype=\"pdf\")\n",
     "\n",
     "    full_text = ''\n",
     "    for page_num in range(len(doc)):\n",
     "        page = doc.load_page(page_num)\n",
     "        # Possibly perform OCR on the page\n",
-    "        text = page.get_text(\"text\", flags=fitz.TEXT_PRESERVE_WHITESPACE | fitz.TEXT_PRESERVE_SPACES | fitz.TEXT_DEHYPHENATE)\n",
+    "        text = page.get_text(\"text\", flags=fitz.TEXT_PRESERVE_WHITESPACE | fitz.TEXT_DEHYPHENATE)\n",
     "        full_text += f\"\\n--- PDF Page {page_num+1} ---\\n\"\n",
     "        full_text += text\n",
     "\n",
     "    return full_text.encode(\"utf-8\")\n",
     "\n",
-    "@udf(returnType=NullType)\n",
-    "def add_text(row) -> None:\n",
-    "    for pdf_filename in row._attachments:\n",
-    "        pdf_path = PurePath(pdf_filename)\n",
-    "        if pdf_path.suffix != '.pdf':\n",
-    "            continue\n",
-    "        pdf_path = PurePath(pdf_file)\n",
-    "        txt_path = pdf_path.stem.append_suffix('.txt')\n",
-    "        if txt_path in row._attachments:\n",
-    "            # TODO(piggy): Recalculate text if text is terrible. Too much noise vocabulary?\n",
-    "            print(f\"Already have text for {row.pdf_url}\")\n",
-    "            continue\n",
-    "        pdf_file = db.get_attachment(row['_id'], pdf_path).read()\n",
-    "        txt_file = pdf_to_text(pdf_file)\n",
-    "        attachment_content_type = 'text/simple, charset=UTF-8'\n",
-    "        attachment_file = BytesIO(txt_file)\n",
-    "\n",
-    "        db.put_attachment(row, attachment_file, txt_path, attachment_content_type)\n",
-    "\n",
-    "\n"
+    "def add_text_to_partition(iterator) -> None:\n",
+    "    couch = couchdb.Server(f'http://{couchdb_username}:{couchdb_password}@{couchdb_host}')\n",
+    "    local_db = couch[ingest_db_name]\n",
+    "    for row in iterator:\n",
+    "        row_dict = row.asDict()\n",
+    "        attachment_dict = row._attachments.asDict()\n",
+    "        for pdf_filename in attachment_dict:\n",
+    "            pdf_path = PurePath(pdf_filename)\n",
+    "            if pdf_path.suffix != '.pdf':\n",
+    "                continue\n",
+    "            pdf_path = PurePath(pdf_filename)\n",
+    "            txt_path_str = pdf_path.stem + '.txt'\n",
+    "            print(f\"DEBUG: txt_path_str: {txt_path_str} ad: {attachment_dict.keys()}\")\n",
+    "            if txt_path_str in attachment_dict:\n",
+    "                # TODO(piggy): Recalculate text if text is terrible. Too much noise vocabulary?\n",
+    "                print(f\"Already have text for {row.pdf_url}\")\n",
+    "                continue\n",
+    "            print(f\"{row._id}, {row.pdf_url}\")\n",
+    "            pdf_file = local_db.get_attachment(row._id, str(pdf_path)).read()\n",
+    "            txt_file = pdf_to_text(pdf_file)\n",
+    "            attachment_content_type = 'text/simple; charset=UTF-8'\n",
+    "            attachment_file = BytesIO(txt_file)\n",
+    "            local_db.put_attachment(row_dict, attachment_file, txt_path_str, attachment_content_type)\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "2d5ef81f-a537-4a15-a001-49a7e6432271",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "DEBUG: txt_path_str: article.txt ad: dict_keys(['article.pdf'])    (6 + 4) / 10]\n",
+      "0020c88329ed456a95a18e0c219269f4, https://www.ingentaconnect.com/content/mtax/mt/2010/00000111/00000001/art00033?crawler=true\n",
+      "DEBUG: txt_path_str: article.txt ad: dict_keys(['article.pdf'])\n",
+      "00320c27b4dc456d8b1350c627d1d5cf, https://www.ingentaconnect.com/content/mtax/mt/2011/00000116/00000001/art00038?crawler=true\n",
+      "                                                                                "
+     ]
+    }
+   ],
+   "source": [
+    "df.select(\"*\").limit(2).foreachPartition(add_text_to_partition)"
    ]
   },
   {
