--- a/jupyter/ist769_skol.ipynb
+++ b/jupyter/ist769_skol.ipynb
@@ -179,7 +179,7 @@
     "\n",
     "### Journals in hand\n",
     "\n",
-    "These are journals we've collected ovdf.rdd.foreach(add_text)er the years. The initial annotated issues are from early years of Mycotaxon. We still need to ingest all of these.\n",
+    "These are journals we've collected over the years. The initial annotated issues are from early years of Mycotaxon. We still need to ingest all of these.\n",
     "\n",
     "* Mycologia (back issues)\n",
     "* [Mycologia at Taylor and Francis](https://www.tandfonline.com/journals/umyc20)\n",
