--- a/jupyter/ist769_skol.ipynb
+++ b/jupyter/ist769_skol.ipynb
@@ -18,13 +18,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "25/11/16 23:48:58 WARN Utils: Your hostname, puchpuchobs resolves to a loopback address: 127.0.1.1; using 172.16.227.68 instead (on interface wlp130s0f0)\n",
-      "25/11/16 23:48:58 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "25/11/17 00:05:57 WARN Utils: Your hostname, puchpuchobs resolves to a loopback address: 127.0.1.1; using 172.16.227.68 instead (on interface wlp130s0f0)\n",
+      "25/11/17 00:05:57 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
       ":: loading settings :: url = jar:file:/data/piggy/miniconda3/envs/skol/lib/python3.13/site-packages/pyspark/jars/ivy-2.5.1.jar!/org/apache/ivy/core/settings/ivysettings.xml\n",
       "Ivy Default Cache set to: /home/piggy/.ivy2/cache\n",
       "The jars for the packages stored in: /home/piggy/.ivy2/jars\n",
       "org.apache.bahir#spark-sql-cloudant_2.12 added as a dependency\n",
-      ":: resolving dependencies :: org.apache.spark#spark-submit-parent-8fb8350f-3fcb-45b7-9a56-19eab6e17792;1.0\n",
+      ":: resolving dependencies :: org.apache.spark#spark-submit-parent-8a6d062c-5e40-4f7f-bf8a-3e24ef151613;1.0\n",
       "\tconfs: [default]\n",
       "\tfound org.apache.bahir#spark-sql-cloudant_2.12;2.4.0 in central\n",
       "\tfound org.apache.bahir#bahir-common_2.12;2.4.0 in central\n",
@@ -38,7 +38,7 @@
       "\tfound com.squareup.okio#okio;1.15.0 in central\n",
       "\tfound com.typesafe#config;1.3.1 in central\n",
       "\tfound org.scalaj#scalaj-http_2.12;2.3.0 in central\n",
-      ":: resolution report :: resolve 197ms :: artifacts dl 7ms\n",
+      ":: resolution report :: resolve 204ms :: artifacts dl 9ms\n",
       "\t:: modules in use:\n",
       "\tcom.cloudant#cloudant-client;2.17.0 from central in [default]\n",
       "\tcom.cloudant#cloudant-http;2.17.0 from central in [default]\n",
@@ -58,14 +58,14 @@
       "\t---------------------------------------------------------------------\n",
       "\t|      default     |   12  |   0   |   0   |   0   ||   12  |   0   |\n",
       "\t---------------------------------------------------------------------\n",
-      ":: retrieving :: org.apache.spark#spark-submit-parent-8fb8350f-3fcb-45b7-9a56-19eab6e17792\n",
+      ":: retrieving :: org.apache.spark#spark-submit-parent-8a6d062c-5e40-4f7f-bf8a-3e24ef151613\n",
       "\tconfs: [default]\n",
-      "\t0 artifacts copied, 12 already retrieved (0kB/6ms)\n",
-      "25/11/16 23:48:59 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "\t0 artifacts copied, 12 already retrieved (0kB/4ms)\n",
+      "25/11/17 00:05:57 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
       "Spark context Web UI available at http://172.16.227.68:4040\n",
-      "Spark context available as 'sc' (master = local[*], app id = local-1763336942133).\n",
+      "Spark context available as 'sc' (master = local[*], app id = local-1763337960291).\n",
       "Spark session available as 'spark'.\n",
       "Welcome to\n",
       "      ____              __\n",
@@ -147,8 +147,8 @@
       "Warning: Ignoring non-Spark config property: cloudant.password\n",
       "Warning: Ignoring non-Spark config property: cloudant.host\n",
       "Warning: Ignoring non-Spark config property: cloudant.username\n",
-      "25/11/16 23:49:04 WARN Utils: Your hostname, puchpuchobs resolves to a loopback address: 127.0.1.1; using 172.16.227.68 instead (on interface wlp130s0f0)\n",
-      "25/11/16 23:49:04 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
+      "25/11/17 00:06:02 WARN Utils: Your hostname, puchpuchobs resolves to a loopback address: 127.0.1.1; using 172.16.227.68 instead (on interface wlp130s0f0)\n",
+      "25/11/17 00:06:02 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
      ]
     },
     {
@@ -165,7 +165,7 @@
       "Ivy Default Cache set to: /home/piggy/.ivy2/cache\n",
       "The jars for the packages stored in: /home/piggy/.ivy2/jars\n",
       "org.apache.bahir#spark-sql-cloudant_2.12 added as a dependency\n",
-      ":: resolving dependencies :: org.apache.spark#spark-submit-parent-83fbe488-4259-4aa8-b01f-5929c91ed69d;1.0\n",
+      ":: resolving dependencies :: org.apache.spark#spark-submit-parent-950af964-6bd7-41f5-aebd-001349794c38;1.0\n",
       "\tconfs: [default]\n",
       "\tfound org.apache.bahir#spark-sql-cloudant_2.12;2.4.0 in central\n",
       "\tfound org.apache.bahir#bahir-common_2.12;2.4.0 in central\n",
@@ -179,7 +179,7 @@
       "\tfound com.squareup.okio#okio;1.15.0 in central\n",
       "\tfound com.typesafe#config;1.3.1 in central\n",
       "\tfound org.scalaj#scalaj-http_2.12;2.3.0 in central\n",
-      ":: resolution report :: resolve 212ms :: artifacts dl 8ms\n",
+      ":: resolution report :: resolve 201ms :: artifacts dl 11ms\n",
       "\t:: modules in use:\n",
       "\tcom.cloudant#cloudant-client;2.17.0 from central in [default]\n",
       "\tcom.cloudant#cloudant-http;2.17.0 from central in [default]\n",
@@ -199,10 +199,10 @@
       "\t---------------------------------------------------------------------\n",
       "\t|      default     |   12  |   0   |   0   |   0   ||   12  |   0   |\n",
       "\t---------------------------------------------------------------------\n",
-      ":: retrieving :: org.apache.spark#spark-submit-parent-83fbe488-4259-4aa8-b01f-5929c91ed69d\n",
+      ":: retrieving :: org.apache.spark#spark-submit-parent-950af964-6bd7-41f5-aebd-001349794c38\n",
       "\tconfs: [default]\n",
-      "\t0 artifacts copied, 12 already retrieved (0kB/6ms)\n",
-      "25/11/16 23:49:04 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "\t0 artifacts copied, 12 already retrieved (0kB/7ms)\n",
+      "25/11/17 00:06:03 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
      ]
@@ -1370,7 +1370,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 78:>                                                         (0 + 2) / 2]"
+      "                                                                                "
      ]
     },
     {
@@ -1383,15 +1383,7 @@
       "  Labels: ['Misc-exposition', 'Description', 'Nomenclature']\n",
       "\n",
       "Saving model to Redis...\n",
-      "Error saving to Redis: ('Pipeline write will fail on this pipeline because stage %s of type %s is not MLWritable', 'SuffixTransformer_6aa87b223488', <class 'skol_classifier.preprocessing.SuffixTransformer'>)\n",
-      "✗ Failed to save model to Redis\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                "
+      "✓ Model successfully saved to Redis with key: skol:classifier:model:v1.0.\n"
      ]
     }
    ],
@@ -1461,7 +1453,11 @@
   {
    "cell_type": "markdown",
    "id": "b20f1457-b1bf-4e02-9b0c-ce194f33969d",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "## Bibliography\n",
     "\n",
