This is a non-working version, but I'm planning big changes.

--- a/jupyter/ist769_skol.ipynb
+++ b/jupyter/ist769_skol.ipynb
@@ -1323,8 +1323,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9fab2d58-0ea7-4288-889c-b1bf9c360743",
+   "metadata": {},
+   "source": [
+    "## Build a classifier to identify paragraph types.\n",
+    "\n",
+    "We save this to redis so that we don't need to train the model every time."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "m4m45o9n97i",
    "metadata": {},
    "outputs": [
@@ -1332,58 +1342,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading annotated files from: /data/piggy/src/github.com/piggyatbaqaqi/skol/data/annotated\n",
-      "Found 190 annotated files\n",
-      "Training classifier...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/piggy/miniconda3/envs/skol/lib/python3.13/site-packages/couchdb/__init__.py:15: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
-      "  __version__ = __import__('pkg_resources').get_distribution('CouchDB').version\n",
-      "/home/piggy/miniconda3/envs/skol/lib/python3.13/site-packages/couchdb/__init__.py:15: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
-      "  __version__ = __import__('pkg_resources').get_distribution('CouchDB').version\n",
-      "/home/piggy/miniconda3/envs/skol/lib/python3.13/site-packages/couchdb/__init__.py:15: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
-      "  __version__ = __import__('pkg_resources').get_distribution('CouchDB').version\n",
-      "/home/piggy/miniconda3/envs/skol/lib/python3.13/site-packages/couchdb/__init__.py:15: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
-      "  __version__ = __import__('pkg_resources').get_distribution('CouchDB').version\n",
-      "/home/piggy/miniconda3/envs/skol/lib/python3.13/site-packages/couchdb/__init__.py:15: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
-      "  __version__ = __import__('pkg_resources').get_distribution('CouchDB').version\n",
-      "/home/piggy/miniconda3/envs/skol/lib/python3.13/site-packages/couchdb/__init__.py:15: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
-      "  __version__ = __import__('pkg_resources').get_distribution('CouchDB').version\n",
-      "                                                                                "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test Accuracy: 0.9410\n",
-      "Test Precision: 0.9614\n",
-      "Test Recall: 0.9650\n",
-      "Test F1 Score: 0.9407\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training complete!\n",
-      "  Accuracy: 0.9410\n",
-      "  F1 Score: 0.9407\n",
-      "  Labels: ['Misc-exposition', 'Description', 'Nomenclature']\n",
-      "\n",
-      "Saving model to Redis...\n",
-      "✓ Model successfully saved to Redis with key: skol:classifier:model:v1.0.\n"
+      "Skipping generation of model skol:classifier:model:v1.0.\n"
      ]
     }
    ],
@@ -1398,44 +1357,94 @@
     ")\n",
     "classifier_model_name = \"skol:classifier:model:v1.0\"\n",
     "\n",
-    "# Initialize classifier with Redis connection\n",
+    "if not redis_client.exists(classifier_model_name):\n",
+    "\n",
+    "    # Initialize classifier with Redis connection\n",
+    "    classifier = SkolClassifier(\n",
+    "        spark=spark,\n",
+    "        redis_client=redis_client,\n",
+    "        redis_key=classifier_model_name,\n",
+    "        auto_load=False  # Don't auto-load, we want to train fresh\n",
+    "    )\n",
+    "    \n",
+    "    # Get annotated training files\n",
+    "    annotated_path = Path.cwd().parent / \"data\" / \"annotated\"\n",
+    "    print(f\"Loading annotated files from: {annotated_path}\")\n",
+    "    \n",
+    "    if annotated_path.exists():\n",
+    "        annotated_files = get_file_list(str(annotated_path), pattern=\"**/*.ann\")\n",
+    "        \n",
+    "        if len(annotated_files) > 0:\n",
+    "            print(f\"Found {len(annotated_files)} annotated files\")\n",
+    "            \n",
+    "            # Train the classifier\n",
+    "            print(\"Training classifier...\")\n",
+    "            results = classifier.fit(annotated_files)\n",
+    "            \n",
+    "            print(f\"Training complete!\")\n",
+    "            print(f\"  Accuracy: {results['accuracy']:.4f}\")\n",
+    "            print(f\"  F1 Score: {results['f1_score']:.4f}\")\n",
+    "            print(f\"  Labels: {classifier.labels}\")\n",
+    "            \n",
+    "            # Save model to Redis\n",
+    "            print(\"\\nSaving model to Redis...\")\n",
+    "            if classifier.save_to_redis():\n",
+    "                print(f\"✓ Model successfully saved to Redis with key: {classifier_model_name}.\")\n",
+    "            else:\n",
+    "                print(\"✗ Failed to save model to Redis\")\n",
+    "        else:\n",
+    "            print(f\"No annotated files found in {annotated_path}\")\n",
+    "    else:\n",
+    "        print(f\"Directory does not exist: {annotated_path}\")\n",
+    "        print(\"Please ensure annotated training data is available.\")\n",
+    "else:\n",
+    "    print(f\"Skipping generation of model {classifier_model_name}.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc3fe9eb-1f1b-4aa8-9796-169faeeaf432",
+   "metadata": {},
+   "source": [
+    "## Extract the taxa names and descriptions\n",
+    "\n",
+    "We use a classifier to extract taxa names and descriptions from articles, issues, and books. The YEDDA annotated texts are written back to CouchDB."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4d5eb24-3287-4a48-854e-834ba3447dd9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "classifier = SkolClassifier(\n",
     "    spark=spark,\n",
     "    redis_client=redis_client,\n",
     "    redis_key=classifier_model_name,\n",
-    "    auto_load=False  # Don't auto-load, we want to train fresh\n",
+    "    auto_load=True\n",
     ")\n",
     "\n",
-    "# Get annotated training files\n",
-    "annotated_path = Path.cwd().parent / \"data\" / \"annotated\"\n",
-    "print(f\"Loading annotated files from: {annotated_path}\")\n",
+    "if classifier.labels is None:\n",
+    "    raise ValueError(\"No model found in Redis. Please train a model first.\")\n",
     "\n",
-    "if annotated_path.exists():\n",
-    "    annotated_files = get_file_list(str(annotated_path), pattern=\"**/*.ann\")\n",
-    "    \n",
-    "    if len(annotated_files) > 0:\n",
-    "        print(f\"Found {len(annotated_files)} annotated files\")\n",
-    "        \n",
-    "        # Train the classifier\n",
-    "        print(\"Training classifier...\")\n",
-    "        results = classifier.fit(annotated_files)\n",
-    "        \n",
-    "        print(f\"Training complete!\")\n",
-    "        print(f\"  Accuracy: {results['accuracy']:.4f}\")\n",
-    "        print(f\"  F1 Score: {results['f1_score']:.4f}\")\n",
-    "        print(f\"  Labels: {classifier.labels}\")\n",
-    "        \n",
-    "        # Save model to Redis\n",
-    "        print(\"\\nSaving model to Redis...\")\n",
-    "        if classifier.save_to_redis():\n",
-    "            print(f\"✓ Model successfully saved to Redis with key: {classifier_model_name}.\")\n",
-    "        else:\n",
-    "            print(\"✗ Failed to save model to Redis\")\n",
-    "    else:\n",
-    "        print(f\"No annotated files found in {annotated_path}\")\n",
-    "else:\n",
-    "    print(f\"Directory does not exist: {annotated_path}\")\n",
-    "    print(\"Please ensure annotated training data is available.\")"
+    "print(f\"Model loaded with labels: {classifier.labels}\")\n",
+    "\n",
+    "print(\"\\nLoading and classifying documents from CouchDB...\")\n",
+    "predictions = classifier.predict_from_couchdb(\n",
+    "    couchdb_url=couchdb_url,\n",
+    "    database=database,\n",
+    "    username=username,\n",
+    "    password=password,\n",
+    "    pattern=\"*.txt\"\n",
+    ")\n",
+    "\n",
+    "# Show sample predictions\n",
+    "print(\"\\nSample predictions:\")\n",
+    "predictions.select(\n",
+    "    \"doc_id\", \"attachment_name\", \"predicted_label\"\n",
+    ").show(5, truncate=50)\n",
+    "\n"
    ]
   },
   {
@@ -1443,10 +1452,7 @@
    "id": "ca929b6a-75e5-4dcb-ace2-8d420f42ce41",
    "metadata": {},
    "source": [
-    "## Extract the taxa names and descriptions\n",
-    "\n",
-    "We use a classifier to extract taxa names and descriptions from articles, issues, and books. Earlier versions of the project added YEDDA annotations. New to this project is saving the metadata, taxa names, and their descriptions directly to a database. Also new is the saved model\n",
-    "\n",
+    "## Build the Taxon objects are store them in CouchDB\n",
     "We use CouchDB to store a full record for each taxon. We copy all metadata to the taxon records."
    ]
   },
