Add a udf that can parse Line objects out of CouchCB.

--- a/jupyter/ist769_skol.ipynb
+++ b/jupyter/ist769_skol.ipynb
@@ -5266,7 +5266,7 @@
     "        that can be processed in parallel. Creates ONE ROW per attachment, so if\n",
     "        a document has multiple attachments matching the pattern, it will have\n",
     "        multiple rows in the resulting DataFrame.\n",
-    "\n",
+    "ist769_skol\n",
     "        Args:\n",
     "            spark: SparkSession\n",
     "            pattern: Pattern for attachment names (e.g., \"*.txt\")\n",
@@ -6129,7 +6129,7 @@
     "## Build the Taxon objects are store them in CouchDB\n",
     "We use CouchDB to store a full record for each taxon. We copy all metadata to the taxon records.\n",
     "\n",
-    "TODO(Claude): Make an alternative to read_files() which reads annotated files in a pyspark partition that are attached to CouchDB records. Line objects need to keep the metadata from the ingest_db_name.\n",
+    "TODO(Claude): Make an alternative to read_files() which reads annotated files in a pyspark partition that are attached to CouchDB records. Line objects need to keep the metadata from the database at ingest_db_name.\n",
     "\n",
     "TODO(Claude): Write a udf based pipeline that reads annotated files from ingest_db_name and writes Taxon objects as json to taxon_db_name."
    ]
